src/objects/Student__c.object
<CustomObject>
    <description>Its student tab. collection of student data</description>
    <fields>
        <fullName>Additional_Activities__c</fullName>
        <description>Extra Activity</description>
        <inlineHelpText>Please Fill Interested area</inlineHelpText>
        <label>Additional Activities</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dance</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In house training</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Fill Your registration Number</description>
        <externalId>true</externalId>
        <label>Registration Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <displayFormat>ST-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Student Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <label>Teacher</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>